--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,6 +26,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install requests PyYAML
 
+    - name: Print Environment Variables
+      run: |
+        echo "GITHUB_REPOSITORY_OWNER: $GITHUB_REPOSITORY_OWNER"
+        echo "GITHUB_REPOSITORY_NAME: $GITHUB_REPOSITORY_NAME"
+        echo "GITHUB_PR_NUMBER: $GITHUB_PR_NUMBER"
+        echo "GITHUB_TOKEN: $GITHUB_TOKEN"
+
+
     - name: Run Python script
       run: python generate_comments_yaml.py
       env:
