--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,14 +28,14 @@ jobs:
 
     - name: Print Environment Variables
       run: |
-        echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
-        echo "GITHUB_EVENT_NUMBER: $GITHUB_EVENT_NUMBER"
+        echo "GITHUB_REPOSITORY:  ${{ github.repository }}
+        echo "GITHUB_EVENT_NUMBER: ${{ github.event.pull_request.number }}"
         echo "GITHUB_TOKEN: $GITHUB_TOKEN"
 
-
+        
     - name: Run Python script
       run: python generate_comments_yaml.py
       env:
          GITHUB_REPOSITORY: ${{ github.repository }}
-         GITHUB_EVENT_NUMBER: ${{ github.event.number }}
+         GITHUB_EVENT_NUMBER: ${{ github.event.pull_request.number }}
          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
