--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,17 +25,18 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests PyYAML
-
-    - name: Print Environment Variables
-      run: |
-        echo "GITHUB_REPOSITORY:  ${{ github.repository }}"
-        echo "GITHUB_EVENT_NUMBER: ${{ github.event.pull_request.number }}"
-        echo "GITHUB_TOKEN: $GITHUB_TOKEN"
-
         
     - name: Run Python script
       run: python generate_comments_yaml.py
       env:
          GITHUB_REPOSITORY: ${{ github.repository }}
          GITHUB_EVENT_NUMBER: ${{ github.event.pull_request.number }}
-         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }
+    
+    - name: Commit and Push Changes
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add .
+        git commit -m "Generate GitHub Actions workflow"
+        git push
