--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,7 @@ jobs:
       env:
          GITHUB_REPOSITORY: ${{ github.repository }}
          GITHUB_EVENT_NUMBER: ${{ github.event.pull_request.number }}
-         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }
+         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
     
     - name: Commit and Push Changes
       run: |
