--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,4 +39,4 @@ jobs:
         git config --local user.name "GitHub Action"
         git add .
         git commit -m "Generate GitHub Actions workflow"
-        git push
+        git push origin HEAD:main
